# project-CAPythons

./: .gitignore  MANIFEST.in  README.md  addressbook.json  addressbook.pkl  notes.json  pyproject.toml  readme.txt  requirements.txt  setup.py  testpackage.py
CAPyBook/: addressbook.pkl  main.py
CAPyBook/app/: command_registry.py  interfaces.py  services.py
CAPyBook/infrastructure/: storage.py
CAPyBook/presentation/: cli.py
CAPythons-book/src/: addressbook.pkl
CAPythons-book/src/app/: interfaces.py
CAPythonsBook/src/app/: command_registry.py
CAPythonsBook/src/resources/: messages_uk.json
src/: assistant_bot.py  assistant_bot_old.py  main.py  notes.json
src/CAPythonsBook/: main.py  notes.json
src/CAPythonsBook/app/: command_registry.py  entities.py  interfaces.py  services.py
src/CAPythonsBook/presentation/: cli.py  messages.py
src/CAPythonsBook/resources/: messages_uk.json
src/app/: entities.py  interfaces.py  services.py  settings.py  test_bot.py
src/infrastructure/: storage.py
src/presentation/: cli.py  messages.py
src/resources/: messages_en.json  messages_uk.json
src/tests/: test_CLI.py  test_assistant_bot.py
tests/: a.py  test1_ref.txt  test_CLI.py  test_assistant_bot.py  tests.py
