[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CAPythonsBook"
version = "0.0.5"
authors = [
  { name="CAPython" },
]
description = "CAPython"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com"
Issues = "https://github.com"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
  "*.json",
  "*.txt"
]

[tool.hatch.build.targets.wheel]
packages = ["src/CAPythons"]